@@ -5,13 +5,15 @@ import com.linkedin.common.GlobalTags;
 import com.linkedin.common.TagAssociationArray;
 import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.metadata.aspect.patch.template.ArrayMergingTemplate;
-import java.util.Collections;
+import java.util.List;
 import javax.annotation.Nonnull;
 
 public class GlobalTagsTemplate implements ArrayMergingTemplate<GlobalTags> {
 
   private static final String TAGS_FIELD_NAME = "tags";
   private static final String TAG_FIELD_NAME = "tag";
+  private static final String ATTRIBUTION_SOURCE =
+      "attribution" + UNIT_SEPARATOR_DELIMITER + "source";
 
   @Override
   public GlobalTags getSubtype(RecordTemplate recordTemplate) throws ClassCastException {
@@ -38,13 +40,13 @@ public class GlobalTagsTemplate implements ArrayMergingTemplate<GlobalTags> {
   @Nonnull
   @Override
   public JsonNode transformFields(JsonNode baseNode) {
-    return arrayFieldToMap(baseNode, TAGS_FIELD_NAME, Collections.singletonList(TAG_FIELD_NAME));
+    return arrayFieldToMap(baseNode, TAGS_FIELD_NAME, List.of(TAG_FIELD_NAME, ATTRIBUTION_SOURCE));
   }
 
   @Nonnull
   @Override
   public JsonNode rebaseFields(JsonNode patched) {
     return transformedMapToArray(
-        patched, TAGS_FIELD_NAME, Collections.singletonList(TAG_FIELD_NAME));
+        patched, TAGS_FIELD_NAME, List.of(TAG_FIELD_NAME, ATTRIBUTION_SOURCE));
   }
 }
